--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
 <title>PixelNailz Booking</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <style>
-body { font-family: Arial, sans-serif; background: #f8f8f8; margin:0; padding:0; }
-header { background: #ff66a3; color: white; text-align: center; padding: 1.5rem; font-size: 2rem; font-weight: bold; letter-spacing: 1px; }
-.container { max-width: 600px; margin: 30px auto; background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
-h2 { text-align: center; color: #d63384; }
-form { display:flex; flex-direction: column; margin-top:20px; }
-label { margin:8px 0 4px; font-weight:bold; }
-input, select, button { padding:10px; border:1px solid #ccc; border-radius:6px; margin-bottom:12px; font-size:1em; }
-button { background:#d63384; color:white; border:none; cursor:pointer; font-weight:bold; }
-button:hover { background:#b82c6d; }
-.note { font-size:0.9em; color:#555; text-align:center; margin:10px 0 20px; }
+body { font-family: Arial, sans-serif; background: #f8f8f8; margin:0; padding:0;}
+header { background: #ff66a3; color: white; text-align:center; padding:1.5rem; font-size:2rem; font-weight:bold; letter-spacing:1px;}
+.container { max-width:600px; margin:30px auto; background:white; padding:25px; border-radius:12px; box-shadow:0 4px 8px rgba(0,0,0,0.1);}
+h2 { text-align:center; color:#d63384;}
+form { display:flex; flex-direction:column; margin-top:20px;}
+label { margin:8px 0 4px; font-weight:bold;}
+input, select, button { padding:10px; border:1px solid #ccc; border-radius:6px; margin-bottom:12px; font-size:1em;}
+button { background:#d63384; color:white; border:none; cursor:pointer; font-weight:bold;}
+button:hover { background:#b82c6d;}
+.note { font-size:0.9em; color:#555; text-align:center; margin:10px 0 20px;}
 .hidden { display:none; }
-footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; background:#f8f8f8; margin-top:40px; }
+footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; background:#f8f8f8; margin-top:40px;}
 </style>
 </head>
 <body>
-
 <header>PixelNailz Booking</header>
 
 <div class="container" id="bookContainer">
@@ -28,13 +27,10 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 <form id="bookingForm">
 <label for="name">Full Name</label>
 <input type="text" id="name" required>
-
 <label for="phone">Phone Number</label>
 <input type="tel" id="phone" required>
-
 <label for="email">Email</label>
 <input type="email" id="email" required>
-
 <label for="service">Service</label>
 <select id="service" required>
 <option value="">Select a service</option>
@@ -43,7 +39,6 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 <option value="Acrylic Full Set">Acrylic Full Set</option>
 <option value="Acrylic Fill">Acrylic Fill</option>
 </select>
-
 <div id="lengthField" class="hidden">
 <label for="length">Length</label>
 <select id="length">
@@ -53,18 +48,14 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 <option value="Extra Long">Extra Long</option>
 </select>
 </div>
-
 <label for="date">Date</label>
 <input type="text" id="date" placeholder="Select a date" required>
-
 <label for="time">Time</label>
 <select id="time" required>
 <option value="12:00">12 PM</option>
 </select>
-
 <button type="submit">Book Appointment</button>
 </form>
-
 <div class="note">
 After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer email and to send your inspo pic 💖
 </div>
@@ -75,15 +66,12 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 <form id="cancelForm">
 <label for="cancelEmail">Email</label>
 <input type="email" id="cancelEmail" required>
-
 <label for="cancelDate">Date</label>
 <input type="text" id="cancelDate" placeholder="Select a date" required>
-
 <label for="cancelTime">Time</label>
 <select id="cancelTime" required>
 <option value="12:00">12 PM</option>
 </select>
-
 <button type="submit">Cancel Appointment</button>
 </form>
 </div>
@@ -92,19 +80,19 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec"; // Replace with your Apps Script URL
-
-// Show length field only for Acrylic Full Set
-document.getElementById("service").addEventListener("change", function() {
-  const lengthField = document.getElementById("lengthField");
-  if (this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
-  else lengthField.classList.add("hidden");
-});
+const WEB_APP_URL = "YOUR_WEB_APP_URL_HERE"; // Replace with your Apps Script URL
 
 // Allowed September dates
 const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
 
-// Function to fetch booked dates
+// Show length field only for Acrylic Full Set
+document.getElementById("service").addEventListener("change", function() {
+  const lengthField = document.getElementById("lengthField");
+  if(this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
+  else lengthField.classList.add("hidden");
+});
+
+// Fetch booked dates from Apps Script
 async function getBookedDates() {
   try {
     const response = await fetch(WEB_APP_URL + "?action=fetch");
@@ -116,52 +104,63 @@ async function getBookedDates() {
   }
 }
 
-// Initialize booking datepicker
-(async () => {
+// Initialize booking datepicker with available dates
+async function initBookingDatepicker() {
   const bookedDates = await getBookedDates();
   const availableDates = allowedDates.filter(d => !bookedDates.includes(d));
+  const oldPicker = document.querySelector("#date")._flatpickr;
+  if(oldPicker) oldPicker.destroy();
   flatpickr("#date", { dateFormat:"Y-m-d", enable: availableDates });
-})();
+}
+initBookingDatepicker();
 
-// Initialize cancel datepicker
+// Initialize cancel datepicker (all allowed dates)
 flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates });
 
-// Booking form
-document.getElementById("bookingForm").addEventListener("submit", function(e) {
-e.preventDefault();
-fetch(WEB_APP_URL, {
-method:"POST",
-body: JSON.stringify({
-action:"book",
-name: document.getElementById("name").value,
-phone: document.getElementById("phone").value,
-email: document.getElementById("email").value,
-service: document.getElementById("service").value,
-length: document.getElementById("service").value==="Acrylic Full Set"? document.getElementById("length").value:"N/A",
-date: document.getElementById("date").value,
-time: "12:00"
-})
-})
-.then(res => res.json())
-.then(data => alert(data.message))
-.catch(()=>alert("Error booking appointment"));
+// Booking form submission
+document.getElementById("bookingForm").addEventListener("submit", async function(e){
+  e.preventDefault();
+  const bookingData = {
+    action:"book",
+    name: document.getElementById("name").value,
+    phone: document.getElementById("phone").value,
+    email: document.getElementById("email").value,
+    service: document.getElementById("service").value,
+    length: document.getElementById("service").value==="Acrylic Full Set"? document.getElementById("length").value:"N/A",
+    date: document.getElementById("date").value,
+    time: "12:00"
+  };
+
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(bookingData) });
+    const data = await res.json();
+    alert(data.message);
+
+    if(data.status === "success") {
+      await initBookingDatepicker(); // refresh available dates
+    }
+  } catch {
+    alert("Error booking appointment");
+  }
 });
 
-// Cancel form
-document.getElementById("cancelForm").addEventListener("submit", function(e) {
-e.preventDefault();
-fetch(WEB_APP_URL, {
-method:"POST",
-body: JSON.stringify({
-action:"cancel",
-email: document.getElementById("cancelEmail").value,
-date: document.getElementById("cancelDate").value,
-time: "12:00"
-})
-})
-.then(res => res.json())
-.then(data => alert(data.message))
-.catch(()=>alert("Error cancelling appointment"));
+// Cancel form submission
+document.getElementById("cancelForm").addEventListener("submit", async function(e){
+  e.preventDefault();
+  const cancelData = {
+    action:"cancel",
+    email: document.getElementById("cancelEmail").value,
+    date: document.getElementById("cancelDate").value,
+    time: "12:00"
+  };
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(cancelData) });
+    const data = await res.json();
+    alert(data.message);
+    await initBookingDatepicker(); // refresh available dates after cancellation
+  } catch {
+    alert("Error cancelling appointment");
+  }
 });
 </script>
 </body>
