--- a/index.html
+++ b/index.html
@@ -149,20 +149,20 @@ time: "12:00"
 
 // Cancel form
 document.getElementById("cancelForm").addEventListener("submit", function(e) {
-e.preventDefault();
-fetch(WEB_APP_URL, {
-method:"POST",
-body: JSON.stringify({
-action:"cancel",
-email: document.getElementById("cancelEmail").value,
-date: document.getElementById("cancelDate").value,
-time: "12:00"
-})
-})
-.then(res => res.json())
-.then(data => alert(data.message))
-.catch(()=>alert("Error cancelling appointment"));
+  e.preventDefault();
+  fetch(WEB_APP_URL, {
+    method:"POST",
+    body: JSON.stringify({
+      action:"cancel",
+      email: document.getElementById("cancelEmail").value,
+      date: document.getElementById("cancelDate").value
+    })
+  })
+  .then(res => res.json())
+  .then(data => alert(data.message))
+  .catch(()=>alert("Error cancelling appointment"));
 });
+
 </script>
 </body>
 </html>
