--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ button:hover { background:#b82c6d; }
 .note { font-size:0.9em; color:#555; text-align:center; margin:10px 0 20px; }
 .hidden { display:none; }
 footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; background:#f8f8f8; margin-top:40px; }
+.flatpickr-disabled { text-decoration: line-through; opacity:0.4; }
 </style>
 </head>
 <body>
@@ -92,7 +93,7 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec"; // Replace with your Apps Script URL
+const WEB_APP_URL = "YOUR_WEB_APP_URL_HERE"; // Replace with your Apps Script URL
 
 // Show length field only for Acrylic Full Set
 document.getElementById("service").addEventListener("change", function() {
@@ -116,5 +117,61 @@ async function getBookedDates() {
   }
 }
 
-// Initialize booking calendar
-async function initBooking
+// Initialize datepicker with disabled booked dates
+async function initBookingDatepicker() {
+  const bookedDates = await getBookedDates();
+  const disabledDates = bookedDates; // already booked
+  const fp = flatpickr("#date", {
+    dateFormat: "Y-m-d",
+    enable: allowedDates,
+    disable: disabledDates
+  });
+}
+
+initBookingDatepicker();
+
+// Booking form
+document.getElementById("bookingForm").addEventListener("submit", async function(e) {
+  e.preventDefault();
+  const bookingData = {
+    action:"book",
+    name: document.getElementById("name").value,
+    phone: document.getElementById("phone").value,
+    email: document.getElementById("email").value,
+    service: document.getElementById("service").value,
+    length: document.getElementById("service").value==="Acrylic Full Set"? document.getElementById("length").value:"N/A",
+    date: document.getElementById("date").value,
+    time: "12:00 PM"
+  };
+
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(bookingData) });
+    const data = await res.json();
+    alert(data.message);
+    if(data.status === "success") await initBookingDatepicker();
+  } catch {
+    alert("Error booking appointment");
+  }
+});
+
+// Cancel form
+document.getElementById("cancelForm").addEventListener("submit", async function(e){
+  e.preventDefault();
+  const cancelData = {
+    action:"cancel",
+    email: document.getElementById("cancelEmail").value,
+    date: document.getElementById("cancelDate").value,
+    time: "12:00 PM"
+  };
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(cancelData) });
+    const data = await res.json();
+    alert(data.message);
+    await initBookingDatepicker();
+  } catch {
+    alert("Error cancelling appointment");
+  }
+});
+</script>
+</body>
+</html>
