--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@ button:hover { background:#b82c6d; }
 .note { font-size:0.9em; color:#555; text-align:center; margin:10px 0 20px; }
 .hidden { display:none; }
 footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; background:#f8f8f8; margin-top:40px; }
-.flatpickr-disabled { text-decoration: line-through; opacity:0.4; }
 </style>
 </head>
 <body>
@@ -60,7 +59,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <label for="time">Time</label>
 <select id="time" required>
-<option value="12:00 PM">12:00 PM</option>
+<option value="12:00 PM">12 PM</option>
 </select>
 
 <button type="submit">Book Appointment</button>
@@ -82,7 +81,7 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 
 <label for="cancelTime">Time</label>
 <select id="cancelTime" required>
-<option value="12:00 PM">12:00 PM</option>
+<option value="12:00 PM">12 PM</option>
 </select>
 
 <button type="submit">Cancel Appointment</button>
@@ -93,45 +92,49 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
-const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec"; // Replace with your Apps Script URL
+const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I1uMwCtBf1mdvDxqaBJ46tTzpgnkH9Xdpq0JUfi7RB_6ZEu5E/exec";
 
 // Show length field only for Acrylic Full Set
 document.getElementById("service").addEventListener("change", function() {
   const lengthField = document.getElementById("lengthField");
-  if (this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
+  if(this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
   else lengthField.classList.add("hidden");
 });
 
 // Allowed September dates
 const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
 
-// Fetch booked dates
+// Fetch booked dates from Apps Script
 async function getBookedDates() {
   try {
-    const res = await fetch(WEB_APP_URL + "?action=fetch");
-    const data = await res.json();
+    const response = await fetch(WEB_APP_URL + "?action=fetch");
+    const data = await response.json();
     const booked = data.bookings || [];
-    return booked.map(b => b.date);
-  } catch {
+    return booked.map(b => b.date); 
+  } catch(e) {
     return [];
   }
 }
 
-// Initialize datepicker with disabled booked dates
+// Initialize booking datepicker with booked dates disabled
 async function initBookingDatepicker() {
   const bookedDates = await getBookedDates();
-  const disabledDates = bookedDates; // already booked
-  const fp = flatpickr("#date", {
+
+  flatpickr("#date", {
     dateFormat: "Y-m-d",
-    enable: allowedDates,
-    disable: disabledDates
+    enable: allowedDates,  
+    disable: bookedDates,  
+    defaultDate: null,
+    minDate: "today"
   });
 }
-
 initBookingDatepicker();
 
-// Booking form
-document.getElementById("bookingForm").addEventListener("submit", async function(e) {
+// Initialize cancel datepicker (all allowed dates)
+flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates });
+
+// Booking form submission
+document.getElementById("bookingForm").addEventListener("submit", async function(e){
   e.preventDefault();
   const bookingData = {
     action:"book",
@@ -145,7 +148,7 @@ document.getElementById("bookingForm").addEventListener("submit", async function
   };
 
   try {
-    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(bookingData) });
+    const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(bookingData) });
     const data = await res.json();
     alert(data.message);
     if(data.status === "success") await initBookingDatepicker();
@@ -154,7 +157,7 @@ document.getElementById("bookingForm").addEventListener("submit", async function
   }
 });
 
-// Cancel form
+// Cancel form submission
 document.getElementById("cancelForm").addEventListener("submit", async function(e){
   e.preventDefault();
   const cancelData = {
@@ -163,11 +166,12 @@ document.getElementById("cancelForm").addEventListener("submit", async function(
     date: document.getElementById("cancelDate").value,
     time: "12:00 PM"
   };
+
   try {
     const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(cancelData) });
     const data = await res.json();
     alert(data.message);
-    await initBookingDatepicker();
+    if(data.status === "success") await initBookingDatepicker();
   } catch {
     alert("Error cancelling appointment");
   }
