--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
 <style>
 body { font-family: Arial, sans-serif; background: #f8f8f8; margin:0; padding:0; }
-header { background: #ff66a3; color: white; text-align: center; padding: 1.5rem; font-size: 2rem; font-weight: bold; }
+header { background: #ff66a3; color: white; text-align: center; padding: 1.5rem; font-size: 2rem; font-weight: bold; letter-spacing: 1px; }
 .container { max-width: 600px; margin: 30px auto; background: white; padding: 25px; border-radius: 12px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); }
 h2 { text-align: center; color: #d63384; }
 form { display:flex; flex-direction: column; margin-top:20px; }
@@ -14,8 +14,8 @@ label { margin:8px 0 4px; font-weight:bold; }
 input, select, button { padding:10px; border:1px solid #ccc; border-radius:6px; margin-bottom:12px; font-size:1em; }
 button { background:#d63384; color:white; border:none; cursor:pointer; font-weight:bold; }
 button:hover { background:#b82c6d; }
-.hidden { display:none; }
 .note { font-size:0.9em; color:#555; text-align:center; margin:10px 0 20px; }
+.hidden { display:none; }
 footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; background:#f8f8f8; margin-top:40px; }
 </style>
 </head>
@@ -59,12 +59,15 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <label for="time">Time</label>
 <select id="time" required>
-<option value="12:00 PM">12:00 PM</option>
+<option value="12:00">12:00 PM</option>
 </select>
 
 <button type="submit">Book Appointment</button>
 </form>
-<div class="note">After booking, please DM <b>@pixelnailz</b> on Instagram for e-transfer and inspo pic 💖</div>
+
+<div class="note">
+After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer email and to send your inspo pic 💖
+</div>
 </div>
 
 <div class="container" id="cancelContainer">
@@ -78,7 +81,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <label for="cancelTime">Time</label>
 <select id="cancelTime" required>
-<option value="12:00 PM">12:00 PM</option>
+<option value="12:00">12 PM</option>
 </select>
 
 <button type="submit">Cancel Appointment</button>
@@ -94,32 +97,84 @@ const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I
 // Show length field only for Acrylic Full Set
 document.getElementById("service").addEventListener("change", function() {
   const lengthField = document.getElementById("lengthField");
-  this.value === "Acrylic Full Set" ? lengthField.classList.remove("hidden") : lengthField.classList.add("hidden");
+  if(this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
+  else lengthField.classList.add("hidden");
 });
 
+// Allowed September dates
 const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
 
-// Fetch booked dates
+// Fetch booked dates from Apps Script
 async function getBookedDates() {
   try {
     const response = await fetch(WEB_APP_URL + "?action=fetch");
     const data = await response.json();
     const booked = data.bookings || [];
-    return booked.map(b => b.date);
-  } catch {
+    return booked.map(b => b.date); // list of booked dates
+  } catch(e) {
     return [];
   }
 }
 
-// Initialize datepicker
+// Initialize booking datepicker
 async function initBookingDatepicker() {
   const bookedDates = await getBookedDates();
   const availableDates = allowedDates.filter(d => !bookedDates.includes(d));
-  flatpickr("#date", { dateFormat:"Y-m-d", enable: availableDates });
+  flatpickr("#date", {
+    dateFormat:"Y-m-d",
+    enable: availableDates,
+    disable: bookedDates,
+  });
 }
 initBookingDatepicker();
+
+// Initialize cancel datepicker (all allowed dates)
 flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates });
 
-// Booking submission
+// Booking form
 document.getElementById("bookingForm").addEventListener("submit", async function(e){
-  e.preventDefault
+  e.preventDefault();
+  const bookingData = {
+    action:"book",
+    name: document.getElementById("name").value,
+    phone: document.getElementById("phone").value,
+    email: document.getElementById("email").value,
+    service: document.getElementById("service").value,
+    length: document.getElementById("service").value==="Acrylic Full Set"? document.getElementById("length").value:"N/A",
+    date: document.getElementById("date").value,
+    time: "12:00 PM"
+  };
+
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body:JSON.stringify(bookingData) });
+    const data = await res.json();
+    alert(data.message);
+
+    if(data.status === "success") {
+      // Refresh available dates after booking
+      await initBookingDatepicker();
+    }
+  } catch {
+    alert("Error booking appointment");
+  }
+});
+
+// Cancel form
+document.getElementById("cancelForm").addEventListener("submit", function(e) {
+e.preventDefault();
+fetch(WEB_APP_URL, {
+method:"POST",
+body: JSON.stringify({
+action:"cancel",
+email: document.getElementById("cancelEmail").value,
+date: document.getElementById("cancelDate").value,
+time: "12:00 PM"
+})
+})
+.then(res => res.json())
+.then(data => alert(data.message))
+.catch(()=>alert("Error cancelling appointment"));
+});
+</script>
+</body>
+</html>
