--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ footer { text-align:center; font-size:0.85em; color:#888; padding:15px 0; backgr
 
 <label for="time">Time</label>
 <select id="time" required>
-<option value="12:00">12:00 PM</option>
+<option value="12:00 PM">12:00 PM</option>
 </select>
 
 <button type="submit">Book Appointment</button>
@@ -81,7 +81,7 @@ After booking, please DM <b>@pixelnailz</b> on Instagram for the e-transfer emai
 
 <label for="cancelTime">Time</label>
 <select id="cancelTime" required>
-<option value="12:00">12 PM</option>
+<option value="12:00 PM">12:00 PM</option>
 </select>
 
 <button type="submit">Cancel Appointment</button>
@@ -109,8 +109,7 @@ async function getBookedDates() {
   try {
     const response = await fetch(WEB_APP_URL + "?action=fetch");
     const data = await response.json();
-    const booked = data.bookings || [];
-    return booked.map(b => b.date); // list of booked dates
+    return data.bookings || [];
   } catch(e) {
     return [];
   }
@@ -122,8 +121,7 @@ async function initBookingDatepicker() {
   const availableDates = allowedDates.filter(d => !bookedDates.includes(d));
   flatpickr("#date", {
     dateFormat:"Y-m-d",
-    enable: availableDates,
-    disable: bookedDates,
+    enable: availableDates
   });
 }
 initBookingDatepicker();
@@ -131,7 +129,7 @@ initBookingDatepicker();
 // Initialize cancel datepicker (all allowed dates)
 flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates });
 
-// Booking form
+// Booking form submission
 document.getElementById("bookingForm").addEventListener("submit", async function(e){
   e.preventDefault();
   const bookingData = {
@@ -159,21 +157,25 @@ document.getElementById("bookingForm").addEventListener("submit", async function
   }
 });
 
-// Cancel form
-document.getElementById("cancelForm").addEventListener("submit", function(e) {
-e.preventDefault();
-fetch(WEB_APP_URL, {
-method:"POST",
-body: JSON.stringify({
-action:"cancel",
-email: document.getElementById("cancelEmail").value,
-date: document.getElementById("cancelDate").value,
-time: "12:00 PM"
-})
-})
-.then(res => res.json())
-.then(data => alert(data.message))
-.catch(()=>alert("Error cancelling appointment"));
+// Cancel form submission
+document.getElementById("cancelForm").addEventListener("submit", async function(e){
+  e.preventDefault();
+  const cancelData = {
+    action:"cancel",
+    email: document.getElementById("cancelEmail").value,
+    date: document.getElementById("cancelDate").value,
+    time: "12:00 PM"
+  };
+  try {
+    const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(cancelData) });
+    const data = await res.json();
+    alert(data.message);
+
+    // Refresh available dates after cancellation
+    await initBookingDatepicker();
+  } catch {
+    alert("Error cancelling appointment");
+  }
 });
 </script>
 </body>
