--- a/index.html
+++ b/index.html
@@ -97,83 +97,27 @@ const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbyUqh_l2OcpEopSqX_I
 // Show length field only for Acrylic Full Set
 document.getElementById("service").addEventListener("change", function() {
   const lengthField = document.getElementById("lengthField");
-  if(this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
+  if (this.value === "Acrylic Full Set") lengthField.classList.remove("hidden");
   else lengthField.classList.add("hidden");
 });
 
 // Allowed September dates
 const allowedDates = ["2025-09-07","2025-09-13","2025-09-14","2025-09-20","2025-09-21","2025-09-27","2025-09-28"];
 
-// Fetch booked dates from Apps Script
+let bookingPicker;
+
+// Fetch booked dates
 async function getBookedDates() {
   try {
-    const response = await fetch(WEB_APP_URL + "?action=fetch");
-    const data = await response.json();
-    const booked = data.bookings || [];
-    return booked.map(b => b.date);
+    const res = await fetch(WEB_APP_URL + "?action=fetch");
+    const data = await res.json();
+    return data.bookedDates || [];
   } catch(e) {
     return [];
   }
 }
 
-// Initialize booking datepicker with disabled booked dates
+// Initialize booking datepicker
 async function initBookingDatepicker() {
   const bookedDates = await getBookedDates();
-  flatpickr("#date", {
-    dateFormat:"Y-m-d",
-    enable: allowedDates,
-    disable: bookedDates
-  });
-}
-initBookingDatepicker();
-
-// Initialize cancel datepicker
-flatpickr("#cancelDate", { dateFormat:"Y-m-d", enable: allowedDates });
-
-// Booking form
-document.getElementById("bookingForm").addEventListener("submit", async function(e){
-  e.preventDefault();
-  const bookingData = {
-    action:"book",
-    name: document.getElementById("name").value,
-    phone: document.getElementById("phone").value,
-    email: document.getElementById("email").value,
-    service: document.getElementById("service").value,
-    length: document.getElementById("service").value==="Acrylic Full Set"? document.getElementById("length").value:"N/A",
-    date: document.getElementById("date").value,
-    time: "12:00 PM"
-  };
-
-  try {
-    const res = await fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(bookingData) });
-    const data = await res.json();
-    alert(data.message);
-
-    if(data.status==="success") {
-      await initBookingDatepicker(); // refresh disabled dates
-    }
-  } catch {
-    alert("Error booking appointment");
-  }
-});
-
-// Cancel form
-document.getElementById("cancelForm").addEventListener("submit", function(e){
-  e.preventDefault();
-  const cancelData = {
-    action:"cancel",
-    email: document.getElementById("cancelEmail").value,
-    date: document.getElementById("cancelDate").value,
-    time: "12:00 PM"
-  };
-  fetch(WEB_APP_URL, { method:"POST", body: JSON.stringify(cancelData) })
-    .then(res=>res.json())
-    .then(async data=>{
-      alert(data.message);
-      await initBookingDatepicker(); // refresh disabled dates
-    })
-    .catch(()=>alert("Error cancelling appointment"));
-});
-</script>
-</body>
-</html>
+  const availableDates = allowedDates.filter
